@startuml Diagrama de Clases de sysacad
package "Sistema Académico"{
    package "Personas"{
        class Alumno {
            - apellido: str
            - nombre: str
            - nroDocumento: str
            - tipoDocumento: TipoDocumento
            - fechaNacimiento: str
            // “M”= Masculino, “F”=Femenino
            - sexo: str
            - nroLegajo: int
            - fechaIngreso: date
        }

        enum TipoDocumento {
            DNI
            LibretaCivica
            LibretaEnrolamiento
            Pasaporte
        }
    }

    class Universidad {
        -nombre: str
        -sigla: str
    }

    class Facultad {
        -nombre: str
        -abreviatura: str
        -directorio: str
        -sigla: str
        -codigoPostal: str
        -ciudad: str
        -domicilio: str
        -telefono: str
        -contacto: str
        -email: str
    }

    class Autoridad {
        -nombre: str
        -cargo: str
        -telefono: str
        -email: str
    }

    class Area {
        - nombre: str
    }

    class Especialidad {
        - nombre: str
        - letra: str
        - observacion: str
    }

    class TipoEspecialidad {
        - nombre: str
        - Nivel: str
    }

    class Grupo {
        - nombre: str
    }

    class Plan {
        - nombre: str
        - fechaInicio: str
        - fechaFin: str
        - observacion: str
    }

    class Orientacion {
        - nombre: str
    }

    class Grado {
        - nombre: str
    }

    class Cargo {
        - nombre: str
        - puntos: int

    }

    class CategoriaCargo {
        - nombre: str
    }


    class Materia {
        - nombre: str
        - codigo: str
        - observacion: str
    }

    class TipoDedicacion {
        - nombre: str
        - observacion: str
    }

    class Departamento {
        - nombre: str
    }


    Orientacion -- Especialidad
    Orientacion -- Plan
    Orientacion -- Materia
    Especialidad -- TipoEspecialidad
    Facultad <-- Autoridad
    Facultad -- Universidad
    Autoridad -- Cargo
    Cargo -- CategoriaCargo
    Cargo -- TipoDedicacion
}
@enduml